Creato con Colaboratory

--- a/Perceptron_Learning_Algorithm.ipynb
+++ b/Perceptron_Learning_Algorithm.ipynb
@@ -6,7 +6,7 @@
       "name": "Perceptron-Learning-Algorithm.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMZVKfrWhVgopwEqgTAqMUQ",
+      "authorship_tag": "ABX9TyOv+fmW4ei/1DwmI9UpSzOk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,8 +116,8 @@
         "while not separable:\n",
         "  samples = make_classification(n_samples=points_number, n_features=2, n_redundant=0, n_informative=1, n_clusters_per_class=1, flip_y=-1)\n",
         "  red = samples[0][samples[1] == 0]\n",
-        "  blue = samples[0][samples[1] == 1]\n",
-        "  separable = any([red[:, k].max() < blue[:, k].min() or red[:, k].min() > blue[:, k].max() for k in range(2)])\n",
+        "  green = samples[0][samples[1] == 1]\n",
+        "  separable = any([red[:, k].max() < green[:, k].min() or red[:, k].min() > green[:, k].max() for k in range(2)])\n",
         "\n",
         "# Training Set as pd.DataFrame\n",
         "ts = pd.DataFrame(columns=[\"ones\", \"x\", \"y\", \"t\"])\n",
@@ -305,7 +305,7 @@
         "plt.ylim(-30, 30)\n",
         "plt.legend()\n",
         "\n",
-        "print(\"\\nWeight vector:\\n\", pred_w)"
+        "print(\"\\nWeight vector:\\n\", wv)"
       ],
       "execution_count": null,
       "outputs": [
