--- a/Titanic_Preprocessing.ipynb
+++ b/Titanic_Preprocessing.ipynb
@@ -60,7 +60,7 @@
         "\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -98,22 +98,22 @@
           "height": 73
         },
         "id": "duDROuK8Ysh8",
-        "outputId": "40736042-ca3d-4d33-f4d9-f7f41a34ace2"
+        "outputId": "5439491c-6fdc-446e-ad03-e7dfca78933d"
       },
       "source": [
         "# Import the train.csv file from Titanic dataset by Kaggle\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-237e9534-188b-41ef-a34a-4672c7a46d26\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-79f51757-c7d2-49bb-925f-2c15b53d2095\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-237e9534-188b-41ef-a34a-4672c7a46d26\">\n",
+              "     <output id=\"result-79f51757-c7d2-49bb-925f-2c15b53d2095\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -129,7 +129,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving train.csv to train (1).csv\n"
+            "Saving train.csv to train.csv\n"
           ]
         }
       ]
@@ -142,7 +142,7 @@
           "height": 424
         },
         "id": "LUp6VKwj_FN5",
-        "outputId": "358ed12d-574c-4b3c-d8ab-7153961cf8cf"
+        "outputId": "f5bd2f6d-ae1b-42b0-eb59-9435bbebbfcc"
       },
       "source": [
         "# Read the CSV and show the first and last rows of the dataset\n",
@@ -150,7 +150,7 @@
         "titanic = pd.read_csv(\"./train.csv\")\n",
         "titanic"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 42
         }
       ]
     },
@@ -388,7 +388,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wvKjAoTZZZwa",
-        "outputId": "ef9f6135-b4b6-4316-f693-38b5fcc4cc1c"
+        "outputId": "88948171-173c-4e30-8b6b-97aab2f88664"
       },
       "source": [
         "print(\"Example:\", titanic.shape[0])\n",
@@ -396,7 +396,7 @@
         "print(\"\\nExample per each feature:\")\n",
         "print(titanic.count())"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         "# If the value is missing, the most frequent value has been entered\n",
         "titanic['Embarked'] = SimpleImputer(missing_values=np.NaN, strategy='most_frequent').fit_transform(np.array(titanic['Embarked'].values)[:, np.newaxis])"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -616,7 +616,7 @@
         "# The features are converted to ordinal integers. \n",
         "titanic['Embarked'] = OrdinalEncoder(categories='auto').fit_transform(np.array(titanic['Embarked'].values)[:, np.newaxis])"
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -677,7 +677,7 @@
         "for i in range(dataset_number):\n",
         "  X_train[i], X_test[i], y_train[i], y_test[i] = train_test_split(dataset[i], target, test_size=0.3, random_state=1)"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -712,7 +712,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4C-M8trUu_em",
-        "outputId": "e0ac8dfd-226e-43f2-acef-12626f6b5d7c"
+        "outputId": "ba664b00-85dd-4750-e9fd-aad863014e5e"
       },
       "source": [
         "# Name of the Classifiers\n",
@@ -756,7 +756,7 @@
         "  # Show the results for the current Classifier\n",
         "  print(tabulate(report, headers=[classifier[k]] + list(headers.values()), tablefmt=\"rst\"), \"\\n\")"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,9 +781,9 @@
             "========================  ==========  ===================  ===================  ============================  ========\n",
             "Neural Network              Personal    Personal + Family    Personal + Ticket    Personal + Family + Ticket    Ticket\n",
             "========================  ==========  ===================  ===================  ============================  ========\n",
-            "Accuracy                    0.757463             0.768657             0.757463                      0.768657  0.641791\n",
-            "Precision                   0.745098             0.784946             0.735849                      0.784946  0.620253\n",
-            "Recall                      0.66087              0.634783             0.678261                      0.634783  0.426087\n",
+            "Accuracy                    0.757463             0.776119             0.779851                      0.772388  0.626866\n",
+            "Precision                   0.75                 0.789474             0.791667                      0.78125   0.619048\n",
+            "Recall                      0.652174             0.652174             0.66087                       0.652174  0.33913\n",
             "========================  ==========  ===================  ===================  ============================  ======== \n",
             "\n"
           ]
