Creato con Colaboratory

--- a/Titanic_Preprocessing.ipynb
+++ b/Titanic_Preprocessing.ipynb
@@ -60,7 +60,7 @@
         "\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 40,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -98,22 +98,22 @@
           "height": 73
         },
         "id": "duDROuK8Ysh8",
-        "outputId": "5439491c-6fdc-446e-ad03-e7dfca78933d"
+        "outputId": "7d6bd71f-7adb-4472-f687-c3ae67a06916"
       },
       "source": [
         "# Import the train.csv file from Titanic dataset by Kaggle\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 41,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-79f51757-c7d2-49bb-925f-2c15b53d2095\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-93a4a61c-a27f-4f97-9288-96b845795130\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-79f51757-c7d2-49bb-925f-2c15b53d2095\">\n",
+              "     <output id=\"result-93a4a61c-a27f-4f97-9288-96b845795130\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -142,7 +142,7 @@
           "height": 424
         },
         "id": "LUp6VKwj_FN5",
-        "outputId": "f5bd2f6d-ae1b-42b0-eb59-9435bbebbfcc"
+        "outputId": "a8998579-df45-4974-de90-3276f9c11211"
       },
       "source": [
         "# Read the CSV and show the first and last rows of the dataset\n",
@@ -150,7 +150,7 @@
         "titanic = pd.read_csv(\"./train.csv\")\n",
         "titanic"
       ],
-      "execution_count": 42,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 3
         }
       ]
     },
@@ -388,7 +388,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wvKjAoTZZZwa",
-        "outputId": "88948171-173c-4e30-8b6b-97aab2f88664"
+        "outputId": "60c98ae6-0f49-484a-a51c-487e6a0f47bd"
       },
       "source": [
         "print(\"Example:\", titanic.shape[0])\n",
@@ -396,7 +396,7 @@
         "print(\"\\nExample per each feature:\")\n",
         "print(titanic.count())"
       ],
-      "execution_count": 43,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         "# If the value is missing, the most frequent value has been entered\n",
         "titanic['Embarked'] = SimpleImputer(missing_values=np.NaN, strategy='most_frequent').fit_transform(np.array(titanic['Embarked'].values)[:, np.newaxis])"
       ],
-      "execution_count": 44,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -616,7 +616,7 @@
         "# The features are converted to ordinal integers. \n",
         "titanic['Embarked'] = OrdinalEncoder(categories='auto').fit_transform(np.array(titanic['Embarked'].values)[:, np.newaxis])"
       ],
-      "execution_count": 45,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -677,7 +677,7 @@
         "for i in range(dataset_number):\n",
         "  X_train[i], X_test[i], y_train[i], y_test[i] = train_test_split(dataset[i], target, test_size=0.3, random_state=1)"
       ],
-      "execution_count": 46,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -698,9 +698,9 @@
         "\n",
         "To compare the performance I have used 3 metrics:\n",
         "\n",
-        "* accuracy\n",
-        "* precision\n",
-        "* recall\n",
+        "* Accuracy\n",
+        "* Precision\n",
+        "* Recall\n",
         "\n",
         "Each metric, for each example, evaluates the model classification compared to the predicted target value."
       ]
@@ -712,7 +712,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4C-M8trUu_em",
-        "outputId": "ba664b00-85dd-4750-e9fd-aad863014e5e"
+        "outputId": "bd03f805-908b-4be6-b414-31bd527436e2"
       },
       "source": [
         "# Name of the Classifiers\n",
@@ -724,7 +724,7 @@
         "# Foreach Classifier\n",
         "for k, model in enumerate([SVC(), KNeighborsClassifier(), MLPClassifier()]):\n",
         "\n",
-        "  report = [[\"Accuracy\"], [\"Precision\"], [\"Recall\"]]\n",
+        "  report = [[\"𝜶 Accuracy\"], [\"𝝅 Precision\"], [\"𝝆 Recall\"]]\n",
         "\n",
         "  # Foreach dataset\n",
         "  for i in range(dataset_number):\n",
@@ -756,7 +756,7 @@
         "  # Show the results for the current Classifier\n",
         "  print(tabulate(report, headers=[classifier[k]] + list(headers.values()), tablefmt=\"rst\"), \"\\n\")"
       ],
-      "execution_count": 47,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,25 +765,25 @@
             "========================  ==========  ===================  ===================  ============================  ========\n",
             "Support Vector Machine      Personal    Personal + Family    Personal + Ticket    Personal + Family + Ticket    Ticket\n",
             "========================  ==========  ===================  ===================  ============================  ========\n",
-            "Accuracy                   0.567164             0.578358              0.641791                      0.652985  0.626866\n",
-            "Precision                  0.470588             0.571429              0.666667                      0.703704  0.682927\n",
-            "Recall                     0.0695652            0.0695652             0.330435                      0.330435  0.243478\n",
+            "𝜶 Accuracy                 0.567164             0.578358              0.641791                      0.652985  0.626866\n",
+            "𝝅 Precision                0.470588             0.571429              0.666667                      0.703704  0.682927\n",
+            "𝝆 Recall                   0.0695652            0.0695652             0.330435                      0.330435  0.243478\n",
             "========================  ==========  ===================  ===================  ============================  ======== \n",
             "\n",
             "========================  ==========  ===================  ===================  ============================  ========\n",
             "K-Nearest Neighbors         Personal    Personal + Family    Personal + Ticket    Personal + Family + Ticket    Ticket\n",
             "========================  ==========  ===================  ===================  ============================  ========\n",
-            "Accuracy                    0.731343             0.716418             0.716418                      0.705224  0.645522\n",
-            "Precision                   0.721649             0.729412             0.724138                      0.7       0.638889\n",
-            "Recall                      0.608696             0.53913              0.547826                      0.547826  0.4\n",
+            "𝜶 Accuracy                  0.731343             0.716418             0.716418                      0.705224  0.645522\n",
+            "𝝅 Precision                 0.721649             0.729412             0.724138                      0.7       0.638889\n",
+            "𝝆 Recall                    0.608696             0.53913              0.547826                      0.547826  0.4\n",
             "========================  ==========  ===================  ===================  ============================  ======== \n",
             "\n",
             "========================  ==========  ===================  ===================  ============================  ========\n",
             "Neural Network              Personal    Personal + Family    Personal + Ticket    Personal + Family + Ticket    Ticket\n",
             "========================  ==========  ===================  ===================  ============================  ========\n",
-            "Accuracy                    0.757463             0.776119             0.779851                      0.772388  0.626866\n",
-            "Precision                   0.75                 0.789474             0.791667                      0.78125   0.619048\n",
-            "Recall                      0.652174             0.652174             0.66087                       0.652174  0.33913\n",
+            "𝜶 Accuracy                  0.757463             0.764925             0.761194                      0.764925  0.626866\n",
+            "𝝅 Precision                 0.75                 0.795455             0.822785                      0.795455  0.608696\n",
+            "𝝆 Recall                    0.652174             0.608696             0.565217                      0.608696  0.365217\n",
             "========================  ==========  ===================  ===================  ============================  ======== \n",
             "\n"
           ]
