Creato con Colaboratory

--- a/Titanic_Preprocessing.ipynb
+++ b/Titanic_Preprocessing.ipynb
@@ -60,7 +60,7 @@
         "\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -98,22 +98,23 @@
           "height": 73
         },
         "id": "duDROuK8Ysh8",
-        "outputId": "7d6bd71f-7adb-4472-f687-c3ae67a06916"
+        "outputId": "a0ca3afc-118b-4cb5-9c98-366805f07ed5"
       },
       "source": [
         "# Import the train.csv file from Titanic dataset by Kaggle\n",
+        "# titanic = pd.read_csv(io.BytesIO(uploaded['train.csv']))\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-93a4a61c-a27f-4f97-9288-96b845795130\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-97631c21-a693-47a2-8ff3-8cae106662a8\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-93a4a61c-a27f-4f97-9288-96b845795130\">\n",
+              "     <output id=\"result-97631c21-a693-47a2-8ff3-8cae106662a8\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -142,15 +143,14 @@
           "height": 424
         },
         "id": "LUp6VKwj_FN5",
-        "outputId": "a8998579-df45-4974-de90-3276f9c11211"
+        "outputId": "962017ad-60d5-49a5-c239-e7e8656349ab"
       },
       "source": [
         "# Read the CSV and show the first and last rows of the dataset\n",
-        "# titanic = pd.read_csv(io.BytesIO(uploaded['train.csv']))\n",
         "titanic = pd.read_csv(\"./train.csv\")\n",
         "titanic"
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 11
         }
       ]
     },
@@ -388,7 +388,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wvKjAoTZZZwa",
-        "outputId": "60c98ae6-0f49-484a-a51c-487e6a0f47bd"
+        "outputId": "c0e744e8-14a3-4fdc-bf74-55b79638aaa6"
       },
       "source": [
         "print(\"Example:\", titanic.shape[0])\n",
@@ -396,7 +396,7 @@
         "print(\"\\nExample per each feature:\")\n",
         "print(titanic.count())"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +526,7 @@
         "      <td>Alphanumeric string</td>\n",
         "      <td></td>\n",
         "      <td>687</td>\n",
-        "      <td>No</td>\n",
+        "      <td>No (due to the large number<br/>of missing values)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <td>Embarked</td>\n",
@@ -584,7 +584,7 @@
         "# If the value is missing, the most frequent value has been entered\n",
         "titanic['Embarked'] = SimpleImputer(missing_values=np.NaN, strategy='most_frequent').fit_transform(np.array(titanic['Embarked'].values)[:, np.newaxis])"
       ],
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -616,7 +616,7 @@
         "# The features are converted to ordinal integers. \n",
         "titanic['Embarked'] = OrdinalEncoder(categories='auto').fit_transform(np.array(titanic['Embarked'].values)[:, np.newaxis])"
       ],
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -677,7 +677,7 @@
         "for i in range(dataset_number):\n",
         "  X_train[i], X_test[i], y_train[i], y_test[i] = train_test_split(dataset[i], target, test_size=0.3, random_state=1)"
       ],
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -712,16 +712,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4C-M8trUu_em",
-        "outputId": "bd03f805-908b-4be6-b414-31bd527436e2"
+        "outputId": "42639f72-de61-438f-cabc-65b6f9915c17"
       },
       "source": [
         "# Name of the Classifiers\n",
-        "classifier = [\"Support Vector Machine\", \"K-Nearest Neighbors\", \"Neural Network\"]\n",
+        "classifiers = [\"Support Vector Machine\", \"K-Nearest Neighbors\", \"Neural Network\"]\n",
         "# Set string lenght to have the tabulate with the same width\n",
-        "for key, value in enumerate(classifier):\n",
-        "  classifier[key] = value.ljust(22)\n",
+        "for key, value in enumerate(classifiers):\n",
+        "  classifiers[key] = value.ljust(22)\n",
         "\n",
         "# Foreach Classifier\n",
+        "# Each hyperparameter of the model is esed with default values established by sklearn\n",
         "for k, model in enumerate([SVC(), KNeighborsClassifier(), MLPClassifier()]):\n",
         "\n",
         "  report = [[\"𝜶 Accuracy\"], [\"𝝅 Precision\"], [\"𝝆 Recall\"]]\n",
@@ -756,7 +757,7 @@
         "  # Show the results for the current Classifier\n",
         "  print(tabulate(report, headers=[classifier[k]] + list(headers.values()), tablefmt=\"rst\"), \"\\n\")"
       ],
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,9 +782,9 @@
             "========================  ==========  ===================  ===================  ============================  ========\n",
             "Neural Network              Personal    Personal + Family    Personal + Ticket    Personal + Family + Ticket    Ticket\n",
             "========================  ==========  ===================  ===================  ============================  ========\n",
-            "𝜶 Accuracy                  0.757463             0.764925             0.761194                      0.764925  0.626866\n",
-            "𝝅 Precision                 0.75                 0.795455             0.822785                      0.795455  0.608696\n",
-            "𝝆 Recall                    0.652174             0.608696             0.565217                      0.608696  0.365217\n",
+            "𝜶 Accuracy                  0.757463             0.776119             0.761194                      0.764925  0.652985\n",
+            "𝝅 Precision                 0.75                 0.789474             0.78022                       0.809524  0.789474\n",
+            "𝝆 Recall                    0.652174             0.652174             0.617391                      0.591304  0.26087\n",
             "========================  ==========  ===================  ===================  ============================  ======== \n",
             "\n"
           ]
