Creato con Colaboratory

--- a/Titanic_Preprocessing.ipynb
+++ b/Titanic_Preprocessing.ipynb
@@ -60,7 +60,7 @@
         "\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
         "# titanic = pd.read_csv(io.BytesIO(uploaded['train.csv']))\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -150,7 +150,7 @@
         "titanic = pd.read_csv(\"./train.csv\")\n",
         "titanic"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +396,7 @@
         "print(\"\\nExample per each feature:\")\n",
         "print(titanic.count())"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         "# If the value is missing, the most frequent value has been entered\n",
         "titanic['Embarked'] = SimpleImputer(missing_values=np.NaN, strategy='most_frequent').fit_transform(np.array(titanic['Embarked'].values)[:, np.newaxis])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +616,7 @@
         "# The features are converted to ordinal integers. \n",
         "titanic['Embarked'] = OrdinalEncoder(categories='auto').fit_transform(np.array(titanic['Embarked'].values)[:, np.newaxis])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -677,7 +677,7 @@
         "for i in range(dataset_number):\n",
         "  X_train[i], X_test[i], y_train[i], y_test[i] = train_test_split(dataset[i], target, test_size=0.3, random_state=1)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -712,7 +712,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4C-M8trUu_em",
-        "outputId": "42639f72-de61-438f-cabc-65b6f9915c17"
+        "outputId": "e247a15d-8fdf-4953-dbcc-e4305e3862dc"
       },
       "source": [
         "# Name of the Classifiers\n",
@@ -755,9 +755,9 @@
         "    report[2].append(recall_score(y_test[i], y_pred))\n",
         "\n",
         "  # Show the results for the current Classifier\n",
-        "  print(tabulate(report, headers=[classifier[k]] + list(headers.values()), tablefmt=\"rst\"), \"\\n\")"
+        "  print(tabulate(report, headers=[classifiers[k]] + list(headers.values()), tablefmt=\"rst\"), \"\\n\")"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,9 +782,9 @@
             "========================  ==========  ===================  ===================  ============================  ========\n",
             "Neural Network              Personal    Personal + Family    Personal + Ticket    Personal + Family + Ticket    Ticket\n",
             "========================  ==========  ===================  ===================  ============================  ========\n",
-            "𝜶 Accuracy                  0.757463             0.776119             0.761194                      0.764925  0.652985\n",
-            "𝝅 Precision                 0.75                 0.789474             0.78022                       0.809524  0.789474\n",
-            "𝝆 Recall                    0.652174             0.652174             0.617391                      0.591304  0.26087\n",
+            "𝜶 Accuracy                  0.753731             0.772388             0.753731                      0.772388  0.645522\n",
+            "𝝅 Precision                 0.747475             0.787234             0.728972                      0.787234  0.738095\n",
+            "𝝆 Recall                    0.643478             0.643478             0.678261                      0.643478  0.269565\n",
             "========================  ==========  ===================  ===================  ============================  ======== \n",
             "\n"
           ]
