Creato con Colaboratory

--- a/PCA_on_IRIS_dataset.ipynb
+++ b/PCA_on_IRIS_dataset.ipynb
@@ -42,6 +42,7 @@
         "id": "DiELsAyVR8xn"
       },
       "source": [
+        "# Import libraries\n",
         "from mpl_toolkits.mplot3d import Axes3D\n",
         "from sklearn.decomposition import PCA\n",
         "from sklearn.datasets import load_iris\n",
@@ -55,7 +56,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +92,7 @@
         "\n",
         "display(pd.DataFrame(data=iris.data, columns=iris.feature_names))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -237,7 +238,7 @@
       "source": [
         "X.shape"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +275,7 @@
         "scaled_features = StandardScaler().fit_transform(X)\n",
         "scaled_features[:5]"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +339,7 @@
         "id": "4pR8FYXOemxF",
         "outputId": "7c4071ec-dcc6-4e15-c371-d918140f118d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -392,7 +393,7 @@
         "id": "PEubVtXBmUwG",
         "outputId": "439a48ef-ded2-4368-fbbe-0a62e831a611"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -457,7 +458,7 @@
         "id": "A2rCyRSxbbUM",
         "outputId": "4bcd4ca4-7668-4c82-eea0-5d1f90dc3183"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -518,7 +519,7 @@
         "id": "uUG1z_yHyR0B",
         "outputId": "5085fc58-0afa-4d85-ca79-f38dbc3d1790"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -589,7 +590,7 @@
         "index += 1\n",
         "addDataset(index, X, \"MLP original\\n dataset\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +638,7 @@
         "# Show the results for the Neural Network Classifier\n",
         "print(tabulate(report, headers=[\"Neural Network\"] + list(headers.values()), tablefmt=\"rst\"), \"\\n\")"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
