Creato con Colaboratory

--- a/Adaboost_on_IRIS_dataset.ipynb
+++ b/Adaboost_on_IRIS_dataset.ipynb
@@ -424,9 +424,9 @@
           "height": 386
         },
         "id": "W45qCxww7G_P",
-        "outputId": "93754e57-f951-446c-d31a-5a96daf233fc"
+        "outputId": "7b55c7a4-590c-49ae-a659-29efb7864190"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,39 +618,39 @@
               "</style>\n",
               "\n",
               "<div class=\"animation\">\n",
-              "  <img id=\"_anim_imgb51819c88c6349e5847f5b9de8aa1226\">\n",
+              "  <img id=\"_anim_img8e51a6a86fa54383a91c5591e2751c5f\">\n",
               "  <div class=\"anim-controls\">\n",
-              "    <input id=\"_anim_sliderb51819c88c6349e5847f5b9de8aa1226\" type=\"range\" class=\"anim-slider\"\n",
+              "    <input id=\"_anim_slider8e51a6a86fa54383a91c5591e2751c5f\" type=\"range\" class=\"anim-slider\"\n",
               "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-              "           oninput=\"animb51819c88c6349e5847f5b9de8aa1226.set_frame(parseInt(this.value));\"></input>\n",
+              "           oninput=\"anim8e51a6a86fa54383a91c5591e2751c5f.set_frame(parseInt(this.value));\"></input>\n",
               "    <div class=\"anim-buttons\">\n",
-              "      <button onclick=\"animb51819c88c6349e5847f5b9de8aa1226.slower()\"><i class=\"fa fa-minus\"></i></button>\n",
-              "      <button onclick=\"animb51819c88c6349e5847f5b9de8aa1226.first_frame()\"><i class=\"fa fa-fast-backward\">\n",
+              "      <button onclick=\"anim8e51a6a86fa54383a91c5591e2751c5f.slower()\"><i class=\"fa fa-minus\"></i></button>\n",
+              "      <button onclick=\"anim8e51a6a86fa54383a91c5591e2751c5f.first_frame()\"><i class=\"fa fa-fast-backward\">\n",
               "          </i></button>\n",
-              "      <button onclick=\"animb51819c88c6349e5847f5b9de8aa1226.previous_frame()\">\n",
+              "      <button onclick=\"anim8e51a6a86fa54383a91c5591e2751c5f.previous_frame()\">\n",
               "          <i class=\"fa fa-step-backward\"></i></button>\n",
-              "      <button onclick=\"animb51819c88c6349e5847f5b9de8aa1226.reverse_animation()\">\n",
+              "      <button onclick=\"anim8e51a6a86fa54383a91c5591e2751c5f.reverse_animation()\">\n",
               "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-              "      <button onclick=\"animb51819c88c6349e5847f5b9de8aa1226.pause_animation()\"><i class=\"fa fa-pause\">\n",
+              "      <button onclick=\"anim8e51a6a86fa54383a91c5591e2751c5f.pause_animation()\"><i class=\"fa fa-pause\">\n",
               "          </i></button>\n",
-              "      <button onclick=\"animb51819c88c6349e5847f5b9de8aa1226.play_animation()\"><i class=\"fa fa-play\"></i>\n",
+              "      <button onclick=\"anim8e51a6a86fa54383a91c5591e2751c5f.play_animation()\"><i class=\"fa fa-play\"></i>\n",
               "          </button>\n",
-              "      <button onclick=\"animb51819c88c6349e5847f5b9de8aa1226.next_frame()\"><i class=\"fa fa-step-forward\">\n",
+              "      <button onclick=\"anim8e51a6a86fa54383a91c5591e2751c5f.next_frame()\"><i class=\"fa fa-step-forward\">\n",
               "          </i></button>\n",
-              "      <button onclick=\"animb51819c88c6349e5847f5b9de8aa1226.last_frame()\"><i class=\"fa fa-fast-forward\">\n",
+              "      <button onclick=\"anim8e51a6a86fa54383a91c5591e2751c5f.last_frame()\"><i class=\"fa fa-fast-forward\">\n",
               "          </i></button>\n",
-              "      <button onclick=\"animb51819c88c6349e5847f5b9de8aa1226.faster()\"><i class=\"fa fa-plus\"></i></button>\n",
+              "      <button onclick=\"anim8e51a6a86fa54383a91c5591e2751c5f.faster()\"><i class=\"fa fa-plus\"></i></button>\n",
               "    </div>\n",
-              "    <form action=\"#n\" name=\"_anim_loop_selectb51819c88c6349e5847f5b9de8aa1226\" class=\"anim-state\">\n",
-              "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_b51819c88c6349e5847f5b9de8aa1226\"\n",
+              "    <form action=\"#n\" name=\"_anim_loop_select8e51a6a86fa54383a91c5591e2751c5f\" class=\"anim-state\">\n",
+              "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_8e51a6a86fa54383a91c5591e2751c5f\"\n",
               "             >\n",
-              "      <label for=\"_anim_radio1_b51819c88c6349e5847f5b9de8aa1226\">Once</label>\n",
-              "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_b51819c88c6349e5847f5b9de8aa1226\"\n",
+              "      <label for=\"_anim_radio1_8e51a6a86fa54383a91c5591e2751c5f\">Once</label>\n",
+              "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_8e51a6a86fa54383a91c5591e2751c5f\"\n",
               "             checked>\n",
-              "      <label for=\"_anim_radio2_b51819c88c6349e5847f5b9de8aa1226\">Loop</label>\n",
-              "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_b51819c88c6349e5847f5b9de8aa1226\"\n",
+              "      <label for=\"_anim_radio2_8e51a6a86fa54383a91c5591e2751c5f\">Loop</label>\n",
+              "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_8e51a6a86fa54383a91c5591e2751c5f\"\n",
               "             >\n",
-              "      <label for=\"_anim_radio3_b51819c88c6349e5847f5b9de8aa1226\">Reflect</label>\n",
+              "      <label for=\"_anim_radio3_8e51a6a86fa54383a91c5591e2751c5f\">Reflect</label>\n",
               "    </form>\n",
               "  </div>\n",
               "</div>\n",
@@ -660,9 +660,9 @@
               "  /* Instantiate the Animation class. */\n",
               "  /* The IDs given should match those used in the template above. */\n",
               "  (function() {\n",
-              "    var img_id = \"_anim_imgb51819c88c6349e5847f5b9de8aa1226\";\n",
-              "    var slider_id = \"_anim_sliderb51819c88c6349e5847f5b9de8aa1226\";\n",
-              "    var loop_select_id = \"_anim_loop_selectb51819c88c6349e5847f5b9de8aa1226\";\n",
+              "    var img_id = \"_anim_img8e51a6a86fa54383a91c5591e2751c5f\";\n",
+              "    var slider_id = \"_anim_slider8e51a6a86fa54383a91c5591e2751c5f\";\n",
+              "    var loop_select_id = \"_anim_loop_select8e51a6a86fa54383a91c5591e2751c5f\";\n",
               "    var frames = new Array(10);\n",
               "    \n",
               "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAbAAAAEgCAYAAADVKCZpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\\\n",
@@ -4213,18 +4213,18 @@
               "    /* set a timeout to make sure all the above elements are created before\n",
               "       the object is initialized. */\n",
               "    setTimeout(function() {\n",
-              "        animb51819c88c6349e5847f5b9de8aa1226 = new Animation(frames, img_id, slider_id, 400.0,\n",
+              "        anim8e51a6a86fa54383a91c5591e2751c5f = new Animation(frames, img_id, slider_id, 400.0,\n",
               "                                 loop_select_id);\n",
               "    }, 0);\n",
               "  })()\n",
               "</script>\n"
             ],
             "text/plain": [
-              "<matplotlib.animation.FuncAnimation at 0x7fc5d61bf690>"
+              "<matplotlib.animation.FuncAnimation at 0x7fc5d61b8910>"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     }
