Creato con Colaboratory

--- a/Adaboost_on_IRIS_dataset.ipynb
+++ b/Adaboost_on_IRIS_dataset.ipynb
@@ -277,7 +277,7 @@
         "\n",
         "I extract the two main components among the four of the Iris dataset.\n",
         "\n",
-        "For more accuracy, I could have classified the examples using all four components, but I use two to be able to visualize the examples and the Adaboost effect via an animation."
+        "For more accuracy, I could have classified the examples using all four components, but I use two to be able to visualize the examples and the Adaboost's effect via an animation."
       ],
       "metadata": {
         "id": "9zP-TwzXAgcO"
