Creato con Colaboratory

--- a/Adaboost_on_IRIS_dataset.ipynb
+++ b/Adaboost_on_IRIS_dataset.ipynb
@@ -59,7 +59,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
         "\n",
         "display(pd.DataFrame(data=iris.data, columns=iris.feature_names))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -252,7 +252,7 @@
         "scaled_features = StandardScaler().fit_transform(X)\n",
         "scaled_features[:5]"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,7 +309,7 @@
         "id": "cQClk2dHbwEk",
         "outputId": "747f6230-4fbb-4b71-a05e-9d62547e3f09"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -372,7 +372,7 @@
         "id": "rvNYG4rhd9oi",
         "outputId": "ea814191-bad3-4964-87f9-e03a7f0b33f5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,7 +426,7 @@
         "id": "W45qCxww7G_P",
         "outputId": "7b55c7a4-590c-49ae-a659-29efb7864190"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4227,6 +4227,22 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Conclusions\n",
+        "\n",
+        "Adaboost, being a Boosting technique, starts from very simple classifiers and combines them, so that subsequent classifiers minimize the error on examples where previous classifiers were the most wrong.\n",
+        "\n",
+        "Boosting focuses efforts on regions where classification is more difficult.\n",
+        "In fact, in the animation we see how the most difficult examples (those in which there is overlap between the yellows and the greens) are those in which the classification is concentrated.\n",
+        "\n",
+        "From a certain point on, however, the accuracy of the forecast no longer improves, perhaps because the hypotheses become more and more complex."
+      ],
+      "metadata": {
+        "id": "NGFkmmXQK5D0"
+      }
     }
   ]
 }
